create and delete transactions for user
